<resources>
    <string name="app_name">Tugas3</string>
    <string name="jelajahi">Jelajahi</string>
    <string name="rezkoto">RezkOto</string>
    <string name="Sportbike" />
    <string name="sportbike">Sportbike</string>
    <string name="superbike">Superbike</string>
    <string name="_2stroke">2stroke</string>
    <string name="cb150r">CB150R</string>
    <string name="r15">R15</string>
    <string name="gsx150r">GSX150R</string>
    <string name="cbr">CBR</string>
    <string name="kapasitas_155_09_cc_tenaga_maksimal_19_04_hp_konfigurasi_katup_sohc_jenis_mesin_single_cylinder_4_valve_4_stroke">Kapasitas 155.09 cc ,Tenaga Maksimal 19.04 hp, Konfigurasi Katup SOHC. Jenis Mesin Single Cylinder, 4 Valve, 4-Stroke</string>
    <string name="kapasitas_149_16_cc_tenaga_maksimal_16_8_hp_jenis_kopling_wet_multi_plate_sistem_pelumasan_wet_pipa_knalpot_single_exhaust_jenis_mesin_single_cylinder_4_stroke_4_valve">Kapasitas 149.16 cc Tenaga Maksimal 16.8 hp Jenis Kopling Wet, Multi-Plate Sistem pelumasan Wet Pipa Knalpot Single Exhaust Jenis Mesin Single Cylinder, 4-Stroke, 4 Valve</string>
    <string name="kapasitas_155_09_cc_tenaga_maksimal_19_04_hp_konfigurasi_katup_sohc_jenis_mesin_single_cylinder_4_valve_4_stroke_liquid_cooled">Kapasitas 155.09 cc ,Tenaga Maksimal 19.04 hp, Konfigurasi Katup SOHC. Jenis Mesin Single Cylinder, 4 Valve, 4-Stroke, Liquid Cooled</string>
    <string name="share">share</string>
    <string name="kapasitas_147_3_cc_tenaga_maksimal_18_9_hp_katup_per_silinder_4_konfigurasi_katup_dohc_diameter_x_langkah_62_mm_x_48_8_mm_rasio_kompresi_11_5_1_kecepatan_maksimum_137_kmph_torsi_maksimal_14_nm_jenis_mesin_4_stroke_liquid_cooled_dohc_sistem_pendinginan_pendingin_cairan_pipa_knalpot_single_exhaust_jumlah_langkah_4_stroke_sistem_pelumasan_wet_sump">Kapasitas 147.3 cc Tenaga Maksimal 18.9 hp Katup Per Silinder 4 Konfigurasi Katup DOHC Diameter x langkah 62 mm x 48.8 mm Rasio Kompresi 11.5:1 Kecepatan maksimum 137 kmph Torsi Maksimal 14 Nm Jenis Mesin 4-Stroke, Liquid Cooled, DOHC Sistem Pendinginan Pendingin Cairan Pipa Knalpot Single Exhaust Jumlah langkah 4-Stroke Sistem pelumasan Wet Sump</string>
    <string name="kapasitas_147_3_cc_tenaga_maksimal_18_9_hpkatup_per_silinder_4_konfigurasi_katup_dohc_diameter_x_langkah_62_mm_x_48_8_mm_rasio_kompresi_11_5_1_kecepatan_maksimum_137_kmph">kapasitas_147_3_cc_tenaga_maksimal_18_9_hpKatup Per Silinder 4 Konfigurasi Katup DOHC Diameter x langkah 62 mm x 48.8 mm Rasio Kompresi 11.5:1 Kecepatan maksimum 137 kmph</string>
    <string name="rx_king">RX-KING</string>
    <string name="ninja">Ninja</string>
    <string name="_125z">125Z</string>
    <string name="ninja150">NINJA150</string>
    <string name="kapasitas_150_cc_jenis_mesin_2_stroke_sohc_diameter_x_langkah_59_mm_x_54_4_mm_rasio_kompresi_6_8_1_pipa_knalpot_single_exhaust_katup_per_silinder_2_konfigurasi_katup_sohc_jenis_penggerak_chain_drive_sistem_pendinginan_pendingin_cairan">Kapasitas 150 cc Jenis Mesin 2-Stroke,SOHC Diameter x langkah 59 mm x 54.4 mm Rasio Kompresi 6.8:1 Pipa Knalpot Single Exhaust Katup Per Silinder 2 Konfigurasi Katup SOHC Jenis Penggerak Chain Drive Sistem Pendinginan Pendingin Cairan</string>
    <string name="kapasitas_150_cc_jenis_mesin_2_stroke_sohc_diameter_x_langkah_59_mm_x_54_4_mm_rasio_kompresi_6_8_1_pipa_knalpot_single_exhaust_katup_per_silinder_2_k">Kapasitas 150 cc Jenis Mesin 2-Stroke,SOHC Diameter x langkah 59 mm x 54.4 mm Rasio Kompresi 6.8:1 Pipa Knalpot Single Exhaust Katup Per Silinder 2 K</string>
    <string name="rxking">RXKING</string>
    <string name="RX_KING">RX-KING</string>
    <string name="berkapasitas_132_cc_2_tak_dan_berpendingin_udara_perbandingan_kompresinya_6_9_1_dengan_diameter_silinder_58_0_mm_x_stroke_50_mm_pakai_kopling_manual_basah_dengan_multiplat_disandingkan_dengan_transmisi_5_percepatan">Berkapasitas 132 cc, 2-tak dan berpendingin udara. Perbandingan kompresinya 6,9 : 1, dengan diameter silinder 58,0 mm x stroke 50 mm. Pakai kopling manual basah dengan multiplat disandingkan dengan transmisi 5 percepatan.</string>
    <string name="perihal_spesifikasi_motor_ini_sudah_dilengkapi_dengan_mesin_2_tak_berkapasitas_dengan_sistem_berpendingin_udara_mesin_ini_dapat_menghasilkan_tenaga_maksimum_sebesar_17_5_horse_power_pada_8000rpm">Perihal spesifikasi, motor ini sudah dilengkapi dengan mesin 2-tak berkapasitas dengan sistem berpendingin udara. Mesin ini dapat menghasilkan tenaga maksimum sebesar 17,5 horse power pada 8000RPM</string>
    <string name="vixion">Vixion</string>
    <string name="r25">R25</string>
    <string name="RXZ">RXZ</string>
    <string name="FIZR">FIZR</string>
    <string name="kapasitas_149_8_cc_tenaga_maksimal_16_36_hp_diameter_x_langkah_57_mm_x_58_7_mm_rasio_kompresi_10_4_1_konfigurasi_katup_sohc_pipa_knalpot_single_exhaust_kecepatan_maksimum_130_kmph_jenis_penggerak_chain_drive_sistem_pendinginan_pendingin_cairan">Kapasitas 149.8 cc Tenaga Maksimal 16.36 hp Diameter x langkah 57 mm x 58.7 mm Rasio Kompresi 10.4:1 Konfigurasi Katup SOHC Pipa Knalpot Single Exhaust Kecepatan maksimum 130 kmph Jenis Penggerak Chain Drive Sistem Pendinginan Pendingin Cairan</string>
    <string name="R25">R25</string>
    <string name="kapasitas_250_cc_tenaga_maksimal_35_5_hp_jenis_mesin_inline_2_cylinder_4_stroke_4_valve_liquid_cooled_dohc_torsi_maksimal_23_6_nm_jenis_kopling_wet_multi_plate_manual_sistem_pendinginan_pendingin_cairan_pipa_knalpot_single_exhaust_jumlah_langkah_4_stroke">Kapasitas 250 cc Tenaga Maksimal 35.5 hp Jenis Mesin Inline 2 Cylinder, 4-Stroke, 4-Valve, Liquid-Cooled DOHC Torsi Maksimal 23.6 Nm Jenis Kopling Wet, Multi-Plate, Manual Sistem Pendinginan Pendingin Cairan Pipa Knalpot Single Exhaust Jumlah langkah 4-Stroke</string>
    <string name="dimensi_pxlxt_1_870_x_670_x_1_040_mm_jarak_antar_sumbu_roda_1_190_mm_ketinggian_jok_750_mm_jarak_terendah_ke_tanah_135_mm_bobot_95_kg_kapasitas_tangki_bbm_4_5_liter_mesin_engine_2_tak_air_cooled_ypcs_silinder_tunggal_bore_x_stroke_52_x_52_mm_kapasitas_silinder_110_4_cc">Dimensi PxLxT\t1.870 x 670 x 1.040 mm Jarak Antar Sumbu Roda\t1.190 mm Ketinggian Jok\t750 mm Jarak Terendah ke Tanah\t135 mm Bobot\t95 Kg Kapasitas Tangki BBM\t4, 5 Liter MESIN Engine\t2-Tak, Air-Cooled YPCS, Silinder Tunggal Bore x Stroke\t52 x 52 mm Kapasitas Silinder\t110,4 cc</string>
    <string name="idr_20_000_000_00">IDR.20.000.000,00</string>
    <string name="engine_2_stroke_135cc_air_cooled_engine_cylinder_arrangement_forward_inclined_single_cylinder_displacement_133_cc_max_power_20_ps_15_kw_8_500_rpm_max_torque_1_85_kgf_m_18_1_n_m_7_500_rpm_max_speed_165_km_h_bore_x_stroke_56_0_x_54_0_mm_compression_ratio_7_1_carburetion_mikuni_vm26_transmission_6_speed_return">Engine: 2-stroke 135cc air-cooled engine Cylinder arrangement: Forward-inclined single cylinder Displacement: 133 cc Max power: 20 PS (15 kW) @ 8,500 rpm Max torque: 1.85 kgf·m (18.1 N·m) @ 7,500 rpm Max speed: 165 km/h Bore x stroke: 56.0 x 54.0 mm Compression ratio: 7*: 1 Carburetion: Mikuni VM26 Transmission: 6-speed return</string>
    <string name="matic">MATIC</string>
    <string name="vario">Vario</string>
    <string name="mio">MIO</string>
    <string name="nmax">NMAX</string>
    <string name="beat">Beat</string>
    <string name="kapasitas_124_8_cc_tenaga_maksimal_11_1_hp_kontrol_emisi_euro_3_sistem_pendinginan_pendingin_cairan_rasio_kompresi_11_0_1_pipa_knalpot_single_exhuast_jumlah_langkah_4_stroke_kecepatan_maksimum_105_kmph_torsi_maksimal_10_8_nm_diameter_x_langkah_52_4_mm_x_57_9_mm_jenis_kopling_automatic_centrifugal_dry_type">Kapasitas 124.8 cc Tenaga Maksimal 11.1 hp Kontrol Emisi Euro 3 Sistem Pendinginan Pendingin Cairan Rasio Kompresi 11.0:1 Pipa Knalpot Single Exhuast Jumlah langkah 4-Stroke Kecepatan maksimum 105 kmph Torsi Maksimal 10.8 Nm Diameter x langkah 52.4 mm x 57.9 mm Jenis Kopling Automatic, Centrifugal, Dry Type</string>
    <string name="kapasitas_125_cc_tenaga_maksimal_9_38_hp_pipa_knalpot_single_exhaust_diameter_x_langkah_52_4_mm_x_57_9_mm_jenis_penggerak_belt_drive_jumlah_langkah_4_stroke_tipe_injeksi_direct_injection_katup_per_silinder_2_sistem_pendinginan_pendingin_udara_sistem_pelumasan_wet_sump_konfigurasi_katup_sohc">Kapasitas 125 cc Tenaga Maksimal 9.38 hp Pipa Knalpot Single Exhaust Diameter x langkah 52.4 mm x 57.9 mm Jenis Penggerak Belt Drive Jumlah langkah 4-Stroke Tipe injeksi Direct Injection Katup Per Silinder 2 Sistem Pendinginan Pendingin udara Sistem pelumasan Wet Sump Konfigurasi Katup SOHC</string>
    <string name="tipe_mesin_4_langkah_sohc_esp_tipe_transmisi_otomatis_v_matic_tipe_kopling_otomatis_sentrifugal_tipe_kering_tipe_starter_kaki_dan_elektrik_diameter_x_langkah_47_x_63_1_mm_volume_langkah_109_5_cc_sistem_pendingin_mesin_pendingin_udara">Tipe Mesin : 4 – Langkah, SOHC, ESP Tipe Transmisi : Otomatis, V-Matic Tipe Kopling : Otomatis, Sentrifugal, Tipe Kering Tipe Starter : Kaki dan Elektrik Diameter x Langkah : 47 x 63.1 mm Volume Langkah : 109.5 cc Sistem Pendingin Mesin : Pendingin Udara</string>
    <string name="kapasitas_155_cc_tenaga_maksimal_15_hp_sistem_pendinginan_pendingin_cairan_rasio_kompresi_10_5_1_jumlah_langkah_4_stroke_torsi_maksimal_13_9_nm_sistem_pelumasan_wet_sump_pipa_knalpot_single_exhaust_jenis_penggerak_belt_drive_jumlah_silinder_1_jenis_kopling_single_dry_type">Kapasitas 155 cc Tenaga Maksimal 15 hp Sistem Pendinginan Pendingin Cairan Rasio Kompresi 10.5:1 Jumlah langkah 4-Stroke Torsi Maksimal 13.9 Nm Sistem pelumasan Wet Sump Pipa Knalpot Single Exhaust Jenis Penggerak Belt Drive Jumlah silinder 1 Jenis Kopling Single Dry Type</string>
    <string name="pcx">PCX</string>
    <string name="kapasitas_156_9_cc_tenaga_maksimal_15_8_hp_jumlah_langkah_4_stroke_pipa_knalpot_single_exhaust_diameter_x_langkah_60_mm_x_55_5_mm_jenis_penggerak_belt_drive_rasio_kompresi_12_01_jumlah_silinder_1_jenis_kopling_automatic_centrifugal_dry_type">Kapasitas 156.9 cc Tenaga Maksimal 15.8 hp Jumlah langkah 4-Stroke Pipa Knalpot Single Exhaust Diameter x langkah 60 mm x 55.5 mm Jenis Penggerak Belt Drive Rasio Kompresi 12:01 Jumlah silinder 1 Jenis Kopling Automatic, Centrifugal, Dry Type</string>
</resources>