<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0C4DE"
    tools:context=".fizr">


    <TextView
        android:id="@+id/fizr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FIZR"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imgfiz"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/fizr"
        />
    <TextView
        android:id="@+id/expfiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dimensi_pxlxt_1_870_x_670_x_1_040_mm_jarak_antar_sumbu_roda_1_190_mm_ketinggian_jok_750_mm_jarak_terendah_ke_tanah_135_mm_bobot_95_kg_kapasitas_tangki_bbm_4_5_liter_mesin_engine_2_tak_air_cooled_ypcs_silinder_tunggal_bore_x_stroke_52_x_52_mm_kapasitas_silinder_110_4_cc"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/costfiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idr_20_000_000_00"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"

        />


    <Button
        android:id="@+id/sharebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>