<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0C4DE"
    tools:context=".rxz">

    <TextView
        android:id="@+id/RXZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RXZ"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/rxz"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/rxz"
        />
    <TextView
        android:id="@+id/expfiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/engine_2_stroke_135cc_air_cooled_engine_cylinder_arrangement_forward_inclined_single_cylinder_displacement_133_cc_max_power_20_ps_15_kw_8_500_rpm_max_torque_1_85_kgf_m_18_1_n_m_7_500_rpm_max_speed_165_km_h_bore_x_stroke_56_0_x_54_0_mm_compression_ratio_7_1_carburetion_mikuni_vm26_transmission_6_speed_return"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/costfiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idr_20_000_000_00"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"

        />


    <Button
        android:id="@+id/sharebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="30sp"
        android:layout_marginTop="10dp"



        />


</LinearLayout>