<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0C4DE"
    tools:context=".hal2">

    <TextView
        android:id="@+id/textrx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rx_king"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#191970"
        android:layout_marginTop="20dp"

      />

  <ImageView
      android:id="@+id/imgrx"
      android:layout_width="100dp"
      android:layout_height="150dp"
      android:src="@drawable/rxk"
      android:layout_gravity="center"
    />

  <TextView
      android:id="@+id/ninja"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ninja"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textStyle="bold"
      android:textColor="#191970"
      android:layout_marginTop="10dp"
    />

    <ImageView
        android:id="@+id/imgnin"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ninjaa"
        />

    <TextView
        android:id="@+id/tupai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_125z"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#191970"
        />

    <ImageView
        android:id="@+id/imgtupai"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/tupai"
        />

  <TextView
      android:id="@+id/rxz"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/RXZ"
      android:textSize="25sp"
      android:textStyle="bold"
      android:textAlignment="center"
      android:layout_marginTop="5dp"
      android:textColor="#191970"
    />

  <ImageView
      android:id="@+id/imgrxz"
      android:layout_width="300dp"
      android:layout_height="120dp"
      android:src="@drawable/rxz"
      android:layout_gravity="center"
    />

  <TextView
      android:id="@+id/fizr"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/FIZR"
      android:textSize="25dp"
      android:textStyle="bold"
      android:textAlignment="center"
      android:layout_marginTop="5dp"
      android:textColor="#191970"
    />




  <ImageView
      android:id="@+id/imgfiz"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/fizr"
      android:layout_gravity="center"

    />


</LinearLayout>