<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:padding="20dp"
        android:paddingTop="25dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/rezkoto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sportbike"
        android:textColor="#8FBC8F"
        android:textSize="40sp"
        android:padding="20dp"
        android:backgroundTint="@color/black"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
        android:padding="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/_2stroke"
        android:textSize="40sp"
        android:textColor="#00FA9A"

        />

    <Button
        android:id="@+id/matic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/matic"
        android:textSize="40sp"
        android:textColor="#87CEEB"




        />

</LinearLayout>