<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8FBC8F"
    tools:context=".hal1">


    <TextView
        android:id="@+id/textcb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb150r"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#800000"
        android:textAlignment="center"
        android:layout_marginTop="10dp"


        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/tvimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cbr"
        android:layout_centerInParent="true"
        android:onClick="cbr"
        android:layout_gravity="center"
        tools:ignore="ObsoleteLayoutParam"
        />

    <TextView
        android:id="@+id/textr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/r15"
        android:textColor="#800000"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"

        />

    <ImageView
        android:id="@+id/imgr"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/r15"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/textg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gsx150r"
        android:textSize="25sp"
        android:textColor="#800000"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/gsx"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gsx"
        android:layout_gravity="center"

        />

        <TextView
            android:id="@+id/vx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vixion"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#800000"

            />

    <ImageView
        android:id="@+id/imgvx"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/vixionr"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/r25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r25"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="#800000"
        />

    <ImageView
        android:id="@+id/imgr25"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/r25"
        android:layout_gravity="center"
        />


</LinearLayout>







