<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0C4DE"
    tools:context=".pcx">


    <TextView
        android:id="@+id/pcx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcx"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#800000"
        />

    <ImageView
        android:id="@+id/imgpcx"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/pcx"
        />

    <TextView
        android:id="@+id/expcx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kapasitas_156_9_cc_tenaga_maksimal_15_8_hp_jumlah_langkah_4_stroke_pipa_knalpot_single_exhaust_diameter_x_langkah_60_mm_x_55_5_mm_jenis_penggerak_belt_drive_rasio_kompresi_12_01_jumlah_silinder_1_jenis_kopling_automatic_centrifugal_dry_type"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/share"
        android:layout_marginTop="20dp"
        android:textSize="30sp"

        />





</LinearLayout>