<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8FBC80"
    tools:context=".r25">

    <TextView
        android:id="@+id/r25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/R25"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imgr25"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/r25"
        />

    <TextView
        android:id="@+id/expr25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kapasitas_250_cc_tenaga_maksimal_35_5_hp_jenis_mesin_inline_2_cylinder_4_stroke_4_valve_liquid_cooled_dohc_torsi_maksimal_23_6_nm_jenis_kopling_wet_multi_plate_manual_sistem_pendinginan_pendingin_cairan_pipa_knalpot_single_exhaust_jumlah_langkah_4_stroke"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/costr25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IDR.50.000.000,00"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="20sp"
        />



</LinearLayout>